syntax = "proto3";
package protos;

service CityService {

  // Accept a user's ride and save it in the DB.
  rpc PostRide(Ride) returns (Result) {}

  // Accept a user's request to join a ride and check if there is a relevant ride.
  rpc PostCustomerRequest(CustomerRequest) returns (Result) {}

  // Accept a user's request to join a ride and check if there is a relevant ride.
  rpc PostPathPlanningRequest(stream CustomerRequest) returns (Result) {}

}

message Ride {
  string firstName = 1;
  string lastName = 2;
  int32 phoneNum = 3;
  string srcCity = 4;
  string dstCity = 5;
  string date = 6;
  int32 vacancies = 7;
  int32 pd = 8;
}

message CustomerRequest {
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
  int32 phoneNum = 4;
  string srcCity = 5;
  string dstCity = 6;
  string date = 7;
}

message Result {
  bool isSuccess = 1;
}